--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -52,6 +52,15 @@ button:hover {
   height: 100%;
 }
 
+input {
+  margin-top: 5px;
+  border-radius: 5px;
+  border: solid 1px var(--dark-theme-color);
+  background-color: #16181d;
+  color: var(--dark-theme-color);
+  padding: 10px;
+}
+
 main {
   max-width: 1280px;
   display: flex;
@@ -60,7 +69,8 @@ main {
   align-items: start;
   align-content: start;
   padding: 20px;
-  margin: auto;
+  margin: 0 auto;
+  /* height: 100%; */
 }
 .activity-title {
   display: flex;
@@ -75,18 +85,42 @@ main {
   margin-bottom: 20px;
 }
 
-input {
-  margin-top: 5px;
-  border-radius: 5px;
-  border: solid 1px var(--dark-theme-color);
-  background-color: #16181d;
-  color: var(--dark-theme-color);
+.setup-controls {
+  display: flex;
+  flex-direction: column;
+}
+.setup-controls a {
+  color: white;
+  background-color: var(--dark-theme-button-color);
+  border: none;
   padding: 10px;
+  border-radius: 10px;
+  margin: 10px 0;
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.setup-controls a:hover {
+  cursor: pointer;
+  background-color: var(--dark-theme-button-hover);
+}
+.setup-controls button {
+  width: 100%;
+  margin: 20px 0;
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.content {
+  width: 100%;
+}
 .spinner {
   animation: 1.8s spinner-rotation infinite;
 }
+
 @keyframes spinner-rotation {
   0% {
     transform: rotate(0deg);
@@ -96,5 +130,11 @@ input {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    height: 100%;
   }
 }
