--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,7 @@ body {
   --dark-theme-card-bg-dark: #3c3f41;
   --dark-theme-button-color: #02a570;
   --dark-theme-button-hover: #01462f;
+  --dark-theme-alert: #ff7d29;
 }
 
 h1 {
